# online_cinema_mate

./: .env.sample  .gitignore  README.md  alembic.ini  pyproject.toml
src/: celery_app.py  main.py
src/config/: dependencies.py  settings.py
src/database/: session.py
src/database/migrations/: env.py
src/database/migrations/versions/: 13ca3100fccb_create_accounts_tables.py  27d7152ae7de_create_accounts_tables.py  32af72abf87d_add_favourite_user_movies_model.py  5c2f0d6edb0c_add_username_to_user_profile.py  64c0bdeeb9a7_add_order_and_order_item_models.py  6eca917ecfba_add_created_at_to_order_model.py  8109e540c7bf_add_movies_models.py  8940320ce722_add_movie_rating_model.py  ab9313a58f07_add_payments_models.py  (+2 more)
src/database/models/: __init__.py  accounts.py  movies.py  orders.py  payments.py  shopping_cart.py
src/exceptions/: __init__.py
src/notifications/: __init__.py  emails.py  interfaces.py
src/notifications/templates/: comment_like_email.html  comment_reply_email.html  payment_refunded.html  payment_success.html
src/payments/: stripe.py
src/routes/: __init__.py  accounts.py  genres.py  movies.py  orders.py  payments.py  profile.py  shopping_cart.py  stars.py
src/schemas/: accounts.py  genres.py  movies.py  orders.py  payments.py  profile.py  shopping_cart.py  stars.py
src/scripts/: import_movies_csv.py
src/security/: http.py
src/services/: accounts.py  genres.py  movies.py  orders.py  payments.py  profile.py  shopping_cart.py  stars.py
src/storages/: interfaces.py  s3.py
src/tasks/: accounts.py  comments.py  emails.py  payments.py
